--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=root
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
 
